--- a/src/VentanasEmergentes/CompetenciasInvalidas.form
+++ b/src/VentanasEmergentes/CompetenciasInvalidas.form
@@ -107,6 +107,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="txtArea">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="99" green="33" red="0" type="rgb"/>
                 </Property>
