--- a/src/pantallas/EvaluarCandidatoDatos.form
+++ b/src/pantallas/EvaluarCandidatoDatos.form
@@ -100,9 +100,9 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="248" max="-2" attributes="0"/>
-                      <Component id="aceptar" min="-2" pref="145" max="-2" attributes="0"/>
+                      <Component id="btnVolver" min="-2" pref="145" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="235" max="-2" attributes="0"/>
-                      <Component id="cancelar" min="-2" pref="145" max="-2" attributes="0"/>
+                      <Component id="btnFinalizar" min="-2" pref="145" max="-2" attributes="0"/>
                       <EmptySpace pref="251" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -112,8 +112,8 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="aceptar" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
-                          <Component id="cancelar" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="btnVolver" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="btnFinalizar" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="61" max="32767" attributes="0"/>
                   </Group>
@@ -121,7 +121,7 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JButton" name="aceptar">
+            <Component class="javax.swing.JButton" name="btnVolver">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="66" green="33" red="0" type="rgb"/>
@@ -138,10 +138,10 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="aceptarActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVolverActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="cancelar">
+            <Component class="javax.swing.JButton" name="btnFinalizar">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="66" green="33" red="0" type="rgb"/>
@@ -161,7 +161,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancelarActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFinalizarActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
